mobile spacing fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,6 +65,7 @@ li {
   font-weight: 600;
   font-size: 20px;
   letter-spacing: 0.05em;
+  color:black;
 }
 
 a {
